[gd_scene load_steps=6 format=2]

[ext_resource path="res://res/fonts/LargFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/ui/general/DependenceSettingsPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/elements/quiz/Quiz.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Quiz" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 600, 1400 )
script = ExtResource( 3 )

[node name="QuizVBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -800.0
margin_right = 360.0
margin_bottom = 800.0
rect_min_size = Vector2( 720, 0 )
size_flags_vertical = 0
alignment = 1

[node name="Questions" type="MarginContainer" parent="QuizVBox"]
margin_right = 720.0
margin_bottom = 1507.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="QuizVBox"]
margin_top = 1515.0
margin_right = 720.0
margin_bottom = 1600.0
size_flags_vertical = 4
custom_constants/separation = 60
alignment = 1

[node name="PreviousButton" type="Button" parent="QuizVBox/HBoxContainer"]
margin_left = 196.0
margin_right = 239.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "<"

[node name="QuestionCounter" type="Label" parent="QuizVBox/HBoxContainer"]
margin_left = 299.0
margin_right = 421.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "1/1"
align = 1

[node name="NextButton" type="Button" parent="QuizVBox/HBoxContainer"]
margin_left = 481.0
margin_right = 524.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = ">"

[node name="DependenceSettingsPanel" parent="." instance=ExtResource( 2 )]
visible = false

[node name="GenerateFromDirectoryButton" type="Button" parent="."]
margin_right = 40.0
margin_bottom = 43.0
text = "Generate from directory"

[connection signal="pressed" from="QuizVBox/HBoxContainer/PreviousButton" to="." method="_on_PreviousButton_pressed"]
[connection signal="pressed" from="QuizVBox/HBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="GenerateFromDirectoryButton" to="." method="_on_GenerateFromDirectoryButton_pressed"]
